[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["Scoder12 <34356756+Scoder12@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
"discord.py" = "^1.7.3"
dateparser = "0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
